--- a/index.less
+++ b/index.less
@@ -179,3 +179,21 @@
 .variable.other.constant {
   color: @constant-decl-color;
 }
+
+// --- Non-syntax Editor Styles ---
+
+@-webkit-keyframes flash {
+  from {
+    background-color: @syntax-selection-flash-color;
+  }
+
+  to {
+    background-color: null;
+  }
+}
+
+.editor .flash.selection .region {
+  -webkit-animation-name: flash;
+  -webkit-animation-duration: 1.0s;
+  -webkit-animation-iteration-count: 1;
+}
