Add support for YARD highlighting in Ruby

--- a/index.less
+++ b/index.less
@@ -145,6 +145,10 @@
   color: @tag-color;
 }
 
+.parameter.yard.ruby {
+  color: @variable-color;
+}
+
 .punctuation.section.embedded, .punctuation.section.embedded .source.ruby {
   color: @punctuation-color;
 }
@@ -185,6 +189,10 @@
   .error-text;
 }
 
+.type.yard.ruby {
+  color: @type-color;
+}
+
 .unit.css {
   color: @operator-color;
 }
@@ -200,6 +208,7 @@
 .wrap-guide {
   .hints;
 }
+
 
 // --- Non-syntax Editor Styles ---
 
